# rust-book-practise

./: Cargo.toml
src/: ch14notes.txt  exercises.rs  front_of_house.rs  lib.rs  main.rs
src/exercises/: branches.rs  ch3practise.rs  ch8practise.rs  closures.rs  controlling_tests.txt  enums.rs  errors.rs  extensible_concurrency.rs  functions.rs  generics.rs  guessing_game.rs  hash_maps.rs  iflet.rs  iterators.rs  lifetimes.rs  matches.rs  message_parsing.rs  ownership.rs  patterns.rs  rectangles.rs  refs_and_borrowing.rs  shared_state_concurrency.rs  slices.rs  smart_pointers.rs  state_pattern_rusty.rs  state_pattern_traditional_oop.rs  strings.rs  structs.rs  testing.rs  threads.rs  traits.rs  traits_for_common_behaviour.rs  variables.rs  vectors.rs
src/front_of_house/: waiting_area.rs
tests/: integration_test.rs  notes.txt
tests/common/: mod.rs
