[package]
name = "rust-book-practise"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello_macro"
path = "hello_macro/src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1"
